--- a/src/components/Parallax/parallax.css
+++ b/src/components/Parallax/parallax.css
@@ -4,30 +4,32 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+    z-index: 30;
 }
 
 h1 {
     font-size: 120px;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     position: absolute;
-    bottom: 5rem;
+    bottom: 20rem;
     z-index: 30;
-    animation: animacion 4s ease;
+    animation: animacion 3.5s ease-out;
 }
 
 @keyframes animacion {
     0% {
+        bottom: 5rem;
         opacity: 0;
     }
     50% {
-        bottom: 30rem;
+        bottom: 20rem;
         opacity: 1;
     }
 }
 
 
 /*
-CONTAINER
+CONTAINER-------------------------------------------------
 */
 
 .parallax-effect {
@@ -36,10 +38,10 @@ CONTAINER
     align-items: center;
     position: relative;
     width: 100%;
-    height: 57rem;
+    height: 59rem;
     margin-bottom: 5rem;
     overflow: hidden;
-    background-image: linear-gradient(180deg, rgba(1, 0, 15, 1), rgba(15, 23, 42, .3), rgba(15, 23, 42, .7), rgba(6, 182, 212, .3), rgba(6, 182, 212, 1));
+    background-image: linear-gradient(180deg, rgba(1, 0, 15, 1), rgba(15, 23, 42, .3), rgba(15, 23, 42, .7), rgba(6, 182, 212, .3), rgba(6, 182, 212, 1), rgba(1, 0, 15, 1), rgba(1, 0, 15, 1));
 }
 
 
@@ -50,17 +52,22 @@ LAYERS
 .layer-1 {
     position: absolute;
     right: 0;
+    bottom: 0;
     height: 100%;
-    width: 93.5%;
+    width: 96.6%;
     z-index: 50;
 }
+
+
+
+
 
 .layer-2 {
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 88.2%;
-    height: 71%;
+    width: 93.9%;
+    height: 86.5%;
     z-index: 40;
 }
 
@@ -79,3 +86,8 @@ LAYERS
     z-index: 20;
 }
  
+
+
+/*
+RESPONSIVE
+*/
