--- a/src/App.css
+++ b/src/App.css
@@ -20,24 +20,33 @@ main {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 1.5rem;
+    gap: 1vw;
 }
 
+@media (max-width: 700px) {
+    .contenedor-blog-gallery {
+        flex-direction: column;
+        gap: 2rem;
+    }
+}
+
+
+
 .secciones {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-items: center;
     text-align: center;
-    grid-template-columns: 1fr;
-    grid-template-rows: 3rem 5rem 22rem;
     padding: 1rem;
-    width: 41.6%;
-    height: 34rem;
+    width: 24.5vw;
+    min-width: 27rem;
+    height: 35rem;
     background-color: rgba(0, 33, 240, .3);
     backdrop-filter: blur(4px);
     border-radius: 1rem;
     box-sizing: border-box;
-    gap: 1rem;
+    gap: 2vh;
 }
 
 .subtitulo-secciones {
@@ -56,4 +65,21 @@ footer {
     gap: 3rem;
     justify-content: center;
     margin: 0rem 0rem 3rem 0rem;
+}
+
+
+
+
+/*
+    BG-ESTELAR------------------------------------
+*/
+
+
+.space {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    z-index: 1;
 }
