--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -3,8 +3,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 23%;
-    height: 24rem;
+    width: 20vw;
+    min-width: 23rem;
+    height: 37vh;
+    min-height: 20rem;
     background: linear-gradient(rgba(1, 0, 15, 1), rgba(1, 0, 15, 1)) padding-box,
                 linear-gradient(145deg, transparent 35%,rgba(45, 0, 239, 1)) border-box;
     border: 2px solid transparent;
@@ -70,8 +72,9 @@ background-color: transparent;
 display: flex;
 justify-content: center;
 align-items: center;
-width: 40%;
-height: 3rem;
+width: 7vw;
+min-width: 7rem;
+height: 5vh;
 background: #313131;
 border: none;
 border-radius: 1rem;
