--- a/src/components/Info/info.css
+++ b/src/components/Info/info.css
@@ -7,39 +7,47 @@
 
 .info {
     display: flex;
-    width: 52.7%;
-    height: 66rem;
+    width: 50vw;
+    min-width: 27rem;
+    height: 65rem;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: rgba(0, 33, 240, 0.30);
     backdrop-filter: blur(4px);
     border-radius: 1rem;
-    padding: 2rem;
+    margin: 1vh 0vw 1vh 0vw;
+    padding: 1vh;   
     overflow: hidden;
     box-sizing: border-box;
 }
 
 .divisor-container {
-    position: absolute;
-    bottom: 22rem;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 30rem;
+    width: 50vw;
+    min-width: 20rem;
+    height: 18rem;
 }
 
 hr {
-    width: 45rem;
+    width: 35vw;
+    min-width: 15rem;
 }
 
 .divisor-img {
-    width: 14rem;
-    height: 14rem;
+    width: 12vw;
+    min-width: 8rem;
+    height: 24vh;
+    min-height: 8rem;
     position: absolute;
-    left: -8rem;
+    left: -13%;
     animation: rotate infinite 5s linear;
 }
+
+
 
 @keyframes rotate {
     from {
@@ -50,23 +58,29 @@ hr {
     }
 }
 
-.texto-2 {
-    margin-top: 17rem;
-}
 
 .brand-container {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
-    width: 35rem;
-    margin: 2rem;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 4rem;
+    width: 10rem;
+    min-width: 5rem;
+    gap: 2.5vh;
+    margin: 1rem 0rem 1rem 0rem;
 }
+
+.brand-line {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2.5vw;
+}
+
 p{
-    font-size: 1.05rem;
-    width: 40rem;
+    font-size: 1.9vh;
+    width: 40vw;
+    min-width: 20rem;
 }
 
 
@@ -82,13 +96,23 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 4.3rem;
+    width: 10vw;
+    max-width: 4.3rem;
 }
 
 span {
     color: #0C74F0;
 }
 
+h2 {
+    display: block;
+    text-align: center;
+    width: 40vw;
+    min-width: 18rem;
+}
+
 h3 {
+    width: 20rem;
+    height: 1rem;
     color: #0C74F0;
 }
