--- a/src/components/Parallax_2/parallax_2.css
+++ b/src/components/Parallax_2/parallax_2.css
@@ -1,11 +1,12 @@
 .parallax_2 {
     display: flex;
     position: relative;
-    width: 100%;
-    height: 960px;
+    width: 100vw;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     margin-bottom: 3rem;
+    margin: 0 auto;    
     overflow: hidden;
     background-image: linear-gradient(to bottom, rgb(7, 6, 36, 1), rgb(7, 6, 36, .3), rgb(0, 183, 255, .5), rgb(0, 183, 255, 1));
 }
@@ -14,66 +15,70 @@
 .tierra-1 {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-height: 70vh;
     background-image: url(./src/assets/parallax_2/tierra-1.png);
     background-size: cover;
     background-position: center;
-    z-index: 40;
+    z-index: 100;
 }
 
 .tierra-2 {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-height: 70vh;
     background-image: url(./src/assets/parallax_2/tierra-2.png);
     background-size: cover;
     background-position: center;
-    z-index: 30;
+    z-index: 90;
 }
 
 .tierra-3 {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-height: 70vh;
     background-image: url(./src/assets/parallax_2/tierra-3.png);
     background-size: cover;
     background-position: center;
-    z-index: 20;
+    z-index: 80;
 }
 
 .tierra-4 {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-height: 70vh;
     background-image: url(./src/assets/parallax_2/tierra-4.png);
     background-size: cover;
     background-position: center;
-    z-index: 15;
+    z-index: 70;
 }
 
 .tierra-5 {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 130rem;
+    height: 80rem;
     background-image: url(./src/assets/parallax_2/tierra-5.png);
     background-size: cover;
     background-position: center;
-    z-index: 50;
-    bottom: -26rem;
+    z-index: 110;
+    bottom: -36rem;
 }
 
 
 .planeta {
     position: absolute;
-    width: 1920px;
-    min-width: 500px;
-    height: 960px;
-    min-height: 300px;
+    width: 100%;
+    height: 70vh;
     background-image: url(./src/assets/parallax_2/planeta.png);
     background-size: cover;
     background-position: center;
-    z-index: 10;
+    z-index: 60;
 }
+
+
 
 
 .parallax-text {
@@ -81,25 +86,30 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
-    z-index: 25;
+    height: 5vh;
+    z-index: 85;
 }
-
 h1 {
-    font-size: 120px;
+    display: block;
+    text-align: center;
+    font-size: 5vw;
+    width: 60vw;
+    height: 4vh;
+    margin: 0;
+    bottom: 0;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     position: absolute;
-    bottom: 18rem;
     animation: animacion 4s ease-out;
 }
 
+
 @keyframes animacion {
     0% {
-        bottom: 3rem;
+        bottom: -10rem;
         opacity: 0;
     }
     50% {
-        bottom: 18rem;
+        bottom: 0rem;
         opacity: 1;
     }
 }
