--- a/src/components/Parallax_2/parallax_2.css
+++ b/src/components/Parallax_2/parallax_2.css
@@ -1,3 +1,4 @@
+
 .parallax_2 {
     display: flex;
     position: relative;
@@ -17,7 +18,7 @@
     width: 100%;
     height: 100vh;
     min-height: 70vh;
-    background-image: url(./public/assets/parallax_2/tierra-1.png);
+    background-image: url(../../assets/Parallax_2/tierra-1.png);
     background-size: cover;
     background-position: center;
     z-index: 100;
@@ -28,7 +29,7 @@
     width: 100%;
     height: 100vh;
     min-height: 70vh;
-    background-image: url(./public/assets/parallax_2/tierra-2.png);
+    background-image: url(../../assets/Parallax_2/tierra-2.png);
     background-size: cover;
     background-position: center;
     z-index: 90;
@@ -39,7 +40,7 @@
     width: 100%;
     height: 100vh;
     min-height: 70vh;
-    background-image: url(./public/assets/parallax_2/tierra-3.png);
+    background-image: url(../../assets/Parallax_2/tierra-3.png);
     background-size: cover;
     background-position: center;
     z-index: 80;
@@ -50,7 +51,7 @@
     width: 100%;
     height: 100vh;
     min-height: 70vh;
-    background-image: url(./public/assets/parallax_2/tierra-4.png);
+    background-image: url(../../assets/Parallax_2/tierra-4.png);
     background-size: cover;
     background-position: center;
     z-index: 70;
@@ -60,7 +61,7 @@
     position: absolute;
     width: 130rem;
     height: 80rem;
-    background-image: url(./public/assets/parallax_2/tierra-5.png);
+    background-image: url(../../assets/Parallax_2/tierra-5.png);
     background-size: cover;
     background-position: center;
     z-index: 110;
@@ -72,7 +73,7 @@
     position: absolute;
     width: 100%;
     height: 70vh;
-    background-image: url(./public/assets/parallax_2/planeta.png);
+    background-image: url(../../assets/Parallax_2/planeta.png);
     background-size: cover;
     background-position: center;
     z-index: 60;
